# LLM-as-LisaFeldmanBarrett

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
context_sphere/: README.md  analyse_articles.py  build_base_json.py  build_context_md.py  config.json  create_sample_set.py  token_distribution.py  token_stastics_file.py  validation_script.py
context_sphere/documentation/: PreProcessing_Documentation.md  implementation_analysis.md  technical_documentation.md  theoretical_alignment.md
src_llm_pipeline/: .env_example  README.md  TODO.py  config.json  emotion_analysis.py
src_llm_pipeline/inputs/prompts/: examples.md  inductive_reasoning_prompt
src_llm_pipeline/inputs/prompts/v1/: LFB_role_feedback_prompt.md  LFB_role_setting_prompt.md  user_task_prompt.md
src_llm_pipeline/inputs/prompts/v10/: Compare_Summaries.md  data_models.py  inductive_reasoning_prompt.md  step_2_summary_prompt.md
src_llm_pipeline/inputs/prompts/v11/: data_models.py  prompt_eval_confabulation.md  step_2_summary_prompt.md  user_task_prompt.md
src_llm_pipeline/inputs/prompts/v12/: LFB_role_feedback_prompt.md  step_2_summary_prompt.md
src_llm_pipeline/inputs/prompts/v13/: LFB_role_setting_prompt.md  prompt_eval_aspects.md  step_2_summary_prompt.md  user_task_prompt.md
src_llm_pipeline/inputs/prompts/v14/: prompt_eval_confabulation.md  step_2_summary_prompt.md
src_llm_pipeline/inputs/sp0/: dummy_file.md
src_llm_pipeline/utils/: add_runs_to_dataset.py  enums.py  eval_aspects.py  helper_functions.py  langsmith_feedback.py  output_parser.py  save_output_to_csv.py
(+34 files in other folders)
