[project]
name = "theory-of-constructed-emotions-implemented-utelizing-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-aiplatform>=1.71.1",
    "icecream>=2.1.4",
    "jupyter>=1.1.1",
    "langchain>=0.3.20",
    "langchain-anthropic>=0.3.10",
    "langchain-google-vertexai>=2.0.9",
    "langchain-openai>=0.3.8",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "vertexai>=1.71.1",
]
